bin/tests/errors/sema/sema_err_fallthrough_outside_switch_case.swg
#global fileprivate

#test
{
    fallthrough // swc-expected-error {{sema_err_fallthrough_outside_switch_case}}
}
